--- a/MerlionPortal/MerlionPortal-war/web/index.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/index.xhtml
@@ -17,10 +17,11 @@
                 <link rel="stylesheet" href="${request.contextPath}/css/login.css" type="text/css" />
             </ui:insert>
         </ui:define>
+        
 
         <!-- Override body -->
         <ui:define name="body">
-            <div class="some-quote-box"><h2>World's Leading 5PL.</h2></div>
+<!--            <div class="some-quote-box"><h2>World's Leading 5PL.</h2></div>-->
             <!-- Background img -->
             <h:panelGroup layout="block" class="bg-img">
                 <div class="wrapper">
