--- a/MerlionPortal/MerlionPortal-war/web/feedback.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/feedback.xhtml
@@ -52,11 +52,11 @@
                                     Hello #{feedbackBean.loginedUser.firstName},
                                     <div>
                                         <h3>Post Feedback</h3>
-                                        <p:inputText id="titleInput" value="#{feedbackBean.feedBackTitle}" style="width:100%;">
+                                        <p:inputText styleClass="form-control" required="true" requiredMessage="Topic is required." id="titleInput" value="#{feedbackBean.feedBackTitle}" style="width:100%;">
                                             <p:watermark for="titleInput" value="Feedback Title" id="titleWatermark" />
                                         </p:inputText>
                                         <br/><br/>
-                                        <p:inputTextarea style="width:100%;height:150px;" counter="remainingText" maxlength="200" counterTemplate="{0} characters remaining." value="#{feedbackBean.feedBackContent}" autoResize="false" /><br/>
+                                        <p:inputTextarea styleClass="form-control" required="true" requiredMessage="Topic is required." style="width:100%;height:150px;" counter="remainingText" maxlength="200" counterTemplate="{0} characters remaining." value="#{feedbackBean.feedBackContent}" autoResize="false" /><br/>
                                         <h:outputText id="remainingText" /><br/>
                                         <p:commandButton value="Post Feedback" actionListener="#{feedbackBean.postFeedback()}" update="feedbackForm" />
                                     </div>
