--- a/MerlionPortal/MerlionPortal-war/web/feedback.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/feedback.xhtml
@@ -12,7 +12,9 @@
         <ui:param name="pageName" value="Feedback" />
 
         <ui:define name="more-imports">
-
+            <ui:insert>
+                <link rel="stylesheet" href="${request.contextPath}/css/login.css" type="text/css" />
+            </ui:insert>
         </ui:define>
 
         <ui:define name="content">
