--- a/MerlionPortal/MerlionPortal-war/web/logout.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/logout.xhtml
@@ -7,7 +7,11 @@
     <ui:composition template="templates/template.xhtml">
 
         <ui:param name="pageName" value="About Us" />
-
+        <ui:define name="more-imports">
+            <ui:insert>
+                <link rel="stylesheet" href="${request.contextPath}/css/login.css" type="text/css" />
+            </ui:insert>
+        </ui:define>
         <!-- Override Content -->
         <ui:define name="content">
             <div class="container">
