--- a/MerlionPortal/MerlionPortal-war/web/resetpassword.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/resetpassword.xhtml
@@ -10,7 +10,11 @@
 
     <ui:composition template="templates/template.xhtml">
         <ui:param name="pageName" value="resetpassword" />
-
+        <ui:define name="more-imports">
+            <ui:insert>
+                <link rel="stylesheet" href="${request.contextPath}/css/login.css" type="text/css" />
+            </ui:insert>
+        </ui:define>
         <!-- Override Content -->
         <ui:define name="content">
             <h:form>
