--- a/MerlionPortal/MerlionPortal-war/web/crms/generateservicequotation.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/crms/generateservicequotation.xhtml
@@ -17,6 +17,7 @@
 
         <ui:define name="more-imports">
             <ui:insert>
+                <link rel="stylesheet" href="${request.contextPath}/css/crms.css" type="text/css" />
             </ui:insert>
         </ui:define>
 
@@ -54,7 +55,15 @@
         </ui:define>
 
         <ui:define name="right">
-            <h:form id="form">
+            <h:form id="form" >
+                <h6 class="activatedStep">RFQ</h6><p:spacer width="160" height="20" />
+                <h6 class="greyStep">Fulfillment check</h6><p:spacer width="90" height="20" />
+                <h6 class="greyStep" >Waiting for fulfillment result</h6><p:spacer width="100" height="20" />
+                <h6 class="greyStep" >Accept/Reject RFQ</h6>
+                <div class="steps">
+                    <img src="../img/4node.jpg"/>
+                </div>
+               
                 <p:fieldset legend="Contact Information" style="margin-bottom:20px">
                     <h:panelGrid columns="3" cellpadding="6">
                         <h:outputText value="Sender Company ID:" /><p:spacer width="20" height="20" />
